SuperSize; Tweak disassembly CSS to fix horizontal overflow
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3587253
Auto-Submit: Andrew Grieve <agrieve@chromium.org>
Commit-Queue: Samuel Huang <huangs@chromium.org>
Cr-Commit-Position: refs/heads/main@{#992817}

--- a/tools/binary_size/libsupersize/viewer/static/main.css
+++ b/tools/binary_size/libsupersize/viewer/static/main.css
@@ -304,6 +304,8 @@ ul {
 
 #disassembly-code {
   border: 1px solid #ccc;
+  box-sizing: border-box;
+  max-width: 100%;
   min-width: 500px;
   overflow: auto;
   position: relative;
